--- a/src/css/card.css
+++ b/src/css/card.css
@@ -52,11 +52,22 @@
     flex-direction: column;
     align-items: stretch;
     height: 300px;
+    width: auto;
     margin: 10px;
     padding: 10px;
     background-color: white;
     border-radius: 0.4em;
     box-shadow: #999 0 0 0.65em;
+    transition: width 0.3s ease-in-out, height 0.3s ease-in-out, top 0.3s ease-in-out, left 0.3s ease-in-out
+}
+
+.card.expanded {
+    position: fixed;
+    height: 80%;
+    width: 80% !important;
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%);
 }
 
 .card > .title {
@@ -71,5 +82,19 @@
 
 .card > #cd-btn {
     margin: 0 -5px -5px -10px;
-
 }
+
+@media only screen and (max-width: 600px) {
+    /* For small mobile phones: */
+    
+}
+
+@media only screen and (max-width: 768px) {
+    /* For large mobile phones: */
+    
+}
+
+@media only screen and (min-width: 992px) {
+    /* For large desktop/laptop montiors */
+    
+} 
