got the card list updating properly (but leave transitions for later)

--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -26,6 +26,10 @@
     border: none;
 }
 
+.hidden {
+    display: none !important;
+}
+
 @media only screen and (max-width: 600px) {
     /* For small mobile phones: */
     
