--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,50 +1,3 @@
-.card-list {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    flex-wrap: wrap; 
-    width: 100%;
-    margin-top: 25px !important;
-}
-
-.card-list.col-1 > .card {
-    width: calc(8.33% - 40px);
-}
-.card-list.col-2 > .card {
-    width: calc(16.66% - 40px);
-}
-.card-list.col-3 > .card {
-    width: calc(25% - 40px);
-}
-.card-list.col-4 > .card {
-    width: calc(33.33% - 40px);
-}
-.card-list.col-5 > .card {
-    width: calc(41.66% - 40px);
-}
-.card-list.col-6 > .card {
-    width: calc(50% - 40px);
-}
-.card-list.col-7 > .card {
-    width: calc(58.33% - 40px);
-}
-.card-list.col-8 > .card {
-    width: calc(66.66% - 40px);
-}
-.card-list.col-9 > .card {
-    width: calc(75% - 40px);
-}
-.card-list.col-10 > .card {
-    width: calc(83.33% - 40px);
-}
-.card-list.col-11 > .card {
-    width: calc(91.66% - 40px);
-}
-.card-list.col-12 > .card {
-    width: calc(100% - 40px);
-}
-
 /* set to fixed when  */
 
 .card {
@@ -58,16 +11,16 @@
     background-color: white;
     border-radius: 0.4em;
     box-shadow: #999 0 0 0.65em;
-    transition: width 0.3s ease-in-out, height 0.3s ease-in-out, top 0.3s ease-in-out, left 0.3s ease-in-out
+    /* transition: width 0.3s ease-in-out, height 0.3s ease-in-out, top 0.3s ease-in-out, left 0.3s ease-in-out */
 }
 
 .card.expanded {
-    position: fixed;
-    height: 80%;
+    top: 50%;
+    left: 50%;
     width: 80% !important;
-    top: 50% !important;
-    left: 50% !important;
-    transform: translate(-50%, -50%);
+    height: 80% !important;
+    transform: translate(-50%,-50%);
+    position: fixed;
 }
 
 .card > .title {
@@ -77,11 +30,23 @@
 
 .card > #cd-content {
     padding: 5px 10px;
-    flex-shrink: 1;
+    flex-grow: 1;
 }
 
-.card > #cd-btn {
+.card > #cd-btm {
     margin: 0 -5px -5px -10px;
+}
+
+.card #prev {
+    float: left;
+}
+
+.card #next {
+    float: right;
+}
+
+.card #cd-btn {
+    width: 100%;
 }
 
 @media only screen and (max-width: 600px) {
