--- a/src/css/index.css
+++ b/src/css/index.css
@@ -30,6 +30,13 @@ body * {
 
 }
 
+#overlay {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(50, 50, 50, 0.5);
+}
+
 @media only screen and (max-width: 600px) {
     /* For small mobile phones: */
     
