--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,18 +1,22 @@
-.section {
-    width: 100%;
-    height: 100vh;
+#bar {
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    width: 100vw;
+    padding: 0.3em 0.8em;
+    background: #f2ebcd;
 }
 
-.section:nth-child(odd) {
-    background-color: #e9e9e9;
-}
-.section:nth-child(even) {
-    background-color: #f1f1f1;
+#nav-content {
+
 }
 
-.section #sec-ctnt > * ~ * {
-    margin-bottom: 0;
-    margin-top: 0.3em;
+.nav-item {
+    
+}
+
+.nav-item ~ .nav-item {
+    padding-left: 1em;
 }
 
 @media only screen and (max-width: 600px) {
