--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -21,7 +21,7 @@
     left: 0.2em;
     bottom: 0;
     background: #9F9F9F;
-    transition: width 0.3s ease-in, left 0.3s ease-in;
+    transition: width 0.3s ease-in, left .3s ease-in;
 }
 
 .nav-item {
