Got the nav items to have its own width and get the bar underline to follow that instead of fixed width
Next to fix - the locationIndex bug stated in the navbar.js
Start to think about hiding the navbar on intro, but display past
everything else other than the intro

Begin to fill data out, and get images for shit

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -27,7 +27,7 @@
 .nav-item {
     display: inline-block;
     box-sizing: border-box;
-    width: 100px;
+    /* width: 100px; */
     text-align: center;
     position: relative;
     cursor: pointer;
