--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,9 +1,8 @@
 /* set to fixed when  */
 
 .card {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
+    display: inline-block;
+    box-sizing: border-box;
     height: 300px;
     width: auto;
     margin: 10px;
@@ -14,6 +13,13 @@
     /* transition: width 0.3s ease-in-out, height 0.3s ease-in-out, top 0.3s ease-in-out, left 0.3s ease-in-out */
 }
 
+.card > .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    height: 100%;
+}
+
 .card.expanded {
     top: 50%;
     left: 50%;
@@ -21,19 +27,20 @@
     height: 80% !important;
     transform: translate(-50%,-50%);
     position: fixed;
+    z-index: 10000;
 }
 
-.card > .title {
+.card .title {
     text-align: center;
 }
 
 
-.card > #cd-content {
+.card #cd-content {
     padding: 5px 10px;
     flex-grow: 1;
 }
 
-.card > #cd-btm {
+.card #cd-btm {
     margin: 0 -5px -5px -10px;
 }
 
