--- a/src/css/cardlist.css
+++ b/src/css/cardlist.css
@@ -1,48 +1,53 @@
 .card-list {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    flex-wrap: wrap; 
+    position: relative;
     width: 100%;
     margin-top: 25px !important;
 }
 
+#cd-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(50, 50, 50, 0.5);
+}
+
 .card-list.col-1 > .card {
-    width: calc(8.33% - 40px);
+    width: calc(8.33% - 20px);
 }
 .card-list.col-2 > .card {
-    width: calc(16.66% - 40px);
+    width: calc(16.66% - 20px);
 }
 .card-list.col-3 > .card {
-    width: calc(25% - 40px);
+    width: calc(25% - 20px);
 }
 .card-list.col-4 > .card {
-    width: calc(33.33% - 40px);
+    width: calc(33.33% - 20px);
 }
 .card-list.col-5 > .card {
-    width: calc(41.66% - 40px);
+    width: calc(41.66% - 20px);
 }
 .card-list.col-6 > .card {
-    width: calc(50% - 40px);
+    width: calc(50% - 20px);
 }
 .card-list.col-7 > .card {
-    width: calc(58.33% - 40px);
+    width: calc(58.33% - 20px);
 }
 .card-list.col-8 > .card {
-    width: calc(66.66% - 40px);
+    width: calc(66.66% - 20px);
 }
 .card-list.col-9 > .card {
-    width: calc(75% - 40px);
+    width: calc(75% - 20px);
 }
 .card-list.col-10 > .card {
-    width: calc(83.33% - 40px);
+    width: calc(83.33% - 20px);
 }
 .card-list.col-11 > .card {
-    width: calc(91.66% - 40px);
+    width: calc(91.66% - 20px);
 }
 .card-list.col-12 > .card {
-    width: calc(100% - 40px);
+    width: calc(100% - 20px);
 }
 
 @media only screen and (max-width: 600px) {
