--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro|Roboto');
 @import "variables";
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Roboto';
 }
 
 .tabbed-entry.two {
