--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,3 +3,6 @@ $tablet-breakpoint: 1024px;
 $desktop-breakpoint: 1025px;
 
 $text-tinted-blue: #172029;
+$material-background: #DFDFDF;
+$description-border-color: #C4C4C4;
+$footer-text-color: #7C7C7C;
