--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,23 +1,146 @@
-.app #landing {
+@import "../variables.scss";
 
-  .section {
-    position: relative;
+.app {
+
+  #landing, #contact-me {
+
+    .section {
+      position: relative;
+    
+      .card {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
   
-    .card {
+        .card__button {
+          font-weight: bold;
+          font-size: 20px;
+        }
+      }
+    }
+  }
+
+  #contact-me .card {
+
+    .card__content {
+      padding-top: calc((114px / 2) + 10px);
+    }
+
+    img {
       position: absolute;
-      top: 50%;
+      height: 114px;
+      width: 114px;
+      top: 0;
       left: 50%;
       transform: translate(-50%, -50%);
+      border: 3px solid white;
+      border-radius: 50%;
+    }
+  }
 
-      .card__button {
-        font-weight: bold;
-        font-size: 20px;
+  #about-me, #work, #projects {
+
+    .parallax {
+      position: relative;
+      height: 312px;
+  
+      .app__content {
+        height: 100%;
+
+        .card {
+          width: 320px;
+          position: absolute;
+          bottom: 30px;
+        }
       }
+    }
+
+    .app__content {
+      height: calc(100vh - 312px);
     }
   }
 
   .app__message.app__message--landing {
     font-size: 18px;
     text-align: center;
+  }
+
+  .app__spacer {
+    height: 200px;
+    width: 100%;
+    background-color: $material-background;
+  }
+
+  .app__content {
+    padding-left: 10%;
+    padding-right: 10%;
+    box-sizing: border-box;
+  }
+
+  .app__row {
+    display: flex;
+    flex-direction: row;
+
+    .header {
+      height: auto;
+      padding-bottom: 0.4em;
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    & > * {
+      flex-grow: 1;
+      flex-basis: 0;
+
+      & + * {
+        margin-left: 30px;
+      }
+    }
+  }
+
+  .contact-form {
+
+    .contact-form__email, .contact-form__name, .contact-form__message {
+      display: block;
+      padding: 0.5rem;
+      width: 502px;
+      line-height: 18px;
+      font-size: 13px;
+      background: #FAFAFA;
+      border: 1px solid #E2E2E2;
+      transition: border 0.3s linear;
+
+      &:focus {
+        border: 1px solid darken(#E2E2E2, 20%);
+      }
+    }
+
+    .contact-form__message {
+      height: 350px;
+      resize: none;
+    }
+
+    .contact-form__submit {
+      font-size: 20px;
+      font-weight: normal;
+      letter-spacing: 0.03em;
+      padding: 0.5em 3em;
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%, 50%);
+      border: none;
+      box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.25);
+      transition: box-shadow 0.3s linear;
+
+      &:hover {
+        box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.25);
+      }
+    }
+
+    & > * + * {
+      margin-top: 0.3rem;
+    }
   }
 }
