--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -2,12 +2,13 @@ $card-background: white;
 
 .card {
   display: inline-block;
+  position: relative;
   box-sizing: border-box;
   background-color: $card-background;
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.25);
 
-  * {
-    background-color: $card-background;
+  &.card--subtitle .card__content {
+    padding: 2.5em 1.5em 1.5em;
   }
 
   .card__content {
@@ -23,9 +24,26 @@ $card-background: white;
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.25);
     transition: box-shadow 0.2s linear;
     cursor: pointer;
+    background-color: $card-background;
 
     &:hover {
       box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.25);
     }
+  }
+
+  &.card--font-spaced .card__content > * {
+    margin-bottom: 0.5em;
+  }
+
+  &.card--font-spaced .card__content:not(:last-child) {
+    margin-bottom: unset;
+  }
+
+  &.card--constant-spaced .card__content > * + * {
+    margin-top: 20px;;
+  }
+  
+  * {
+    background-color: inherit;
   }
 }
