--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,22 +2,42 @@
 
 .header {
   position: relative;
-  height: 80px;
+  height: 1.5em;
   font-size: 55px;
-  margin-bottom: 0.5em;
   color: $text-tinted-blue;
+  border-bottom: 1px solid $text-tinted-blue;
+
+
+  &.header--sub-content {
+    height: calc(1.5em + 0.3em);
+
+    .header__sub-content {
+      font-size: 0.3em;
+      font-weight: bold;
+    }
+  }
+
+  &.header--no-bar {
+    border-bottom: none;
+    height: unset;
+  }
+
+  &.header--subtitle {
+    height: unset;
+    display: flex;
+    align-content: stretch;
+    flex-direction: column;
+    font-size: 45px;
+
+    .header__title {
+      position: unset;
+      text-align: start;
+    }
+  }
 
   .header__title {
     width: 100%;
     top: 0;
     text-align: center;
-  }
-
-  .header__bar {
-    position: absolute;
-    height: 1px;
-    width: 100%;
-    bottom: 0;
-    background-color: $text-tinted-blue;
   }
 }
