--- a/src/components/Section/Section.scss
+++ b/src/components/Section/Section.scss
@@ -1,7 +1,11 @@
+@import "../../variables.scss";
+
 .section {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  padding-left: 10%;
-  padding-right: 10%;
-  box-sizing: border-box;
+  background-color: $material-background;
+}
+
+.parallax .section {
+  background-color: unset;
 }
