--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro|Roboto');
+@import url('https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro|Roboto|Roboto+Condensed');
 @import "variables";
 
 body {
