--- a/src/components/Parallax/Parallax.scss
+++ b/src/components/Parallax/Parallax.scss
@@ -1,5 +1,12 @@
 .parallax {
     box-sizing: border-box;
     width: 100%;
+    height: 100vh;
+    margin-bottom: -100vh;
     box-shadow: inset 0px 0px 25px 1px rgba(0, 0, 0, 0.65);
+
+    &.parallax--header {
+        height: 512px;
+        margin-bottom: -512px;
+    }
 }
