--- a/src/components/Parallax/Parallax.scss
+++ b/src/components/Parallax/Parallax.scss
@@ -3,10 +3,19 @@
     width: 100%;
     height: 100vh;
     margin-bottom: -100vh;
-    box-shadow: inset 0px 0px 25px 1px rgba(0, 0, 0, 0.65);
+    background-size: cover;
+    background-position: center;
+
+    & + * {
+        height: 100vh;
+    }
 
     &.parallax--header {
-        height: 512px;
-        margin-bottom: -512px;
+        height: 312px;
+        margin-bottom: -312px;
+
+        & + * {
+            height: 312px;
+        }
     }
 }
