--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -6,6 +6,7 @@
 
     .section {
       position: relative;
+      background-color: unset;
     
       .card {
         position: absolute;
@@ -41,18 +42,13 @@
 
   #about-me, #work, #projects {
 
-    .parallax {
-      position: relative;
-      height: 312px;
-  
-      .app__content {
-        height: 100%;
+    .parallax-banner .app__content {
+      height: 100%;
 
-        .card {
-          width: 320px;
-          position: absolute;
-          bottom: 30px;
-        }
+      .card {
+        width: 320px;
+        position: absolute;
+        bottom: 30px;
       }
     }
 
@@ -97,6 +93,26 @@
         margin-left: 30px;
       }
     }
+  }
+
+
+  .parallax-banner {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+
+    &.parallax-banner--header {
+      height: 312px;
+    }
+
+    // .parallax-banner__image {
+    //   position: absolute;
+    //   top: 0;
+    //   left: 0;
+    //   bottom: 0;
+    //   right: 0;
+    //   max-width: 100%;
+    // }
   }
 
   .contact-form {
