--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,6 @@
 @import "../../variables";
 
+// FIXME: revamp this css as the height: 1.5em gets ugly when it wraps
 .header {
   position: relative;
   height: 1.5em;
