--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,7 +1,9 @@
 $card-background: white;
 
 .card {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
   position: relative;
   box-sizing: border-box;
   padding: 40px;
@@ -12,32 +14,43 @@ $card-background: white;
     padding: 2.5em 1.5em 1.5em;
   }
 
-  .card__button {
-    padding: 0.85em 2em;
+  & > .card__button {
     position: absolute;
+    padding: 0.85em 2em;
     bottom: 0;
     left: 50%;
     transform: translate(-50%, 50%);
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.25);
     transition: box-shadow 0.2s linear;
-    cursor: pointer;
     background-color: $card-background;
+    cursor: pointer;
 
     &:hover {
       box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.25);
     }
   }
 
-  &.card--font-spaced .card__content > * {
+  &.card--font-spaced > *:not(.card__button) {
     margin-bottom: 0.5em;
   }
 
-  &.card--font-spaced .card__content:not(:last-child) {
+  &.card--font-spaced:not(:last-child) {
     margin-bottom: unset;
   }
 
-  &.card--constant-spaced .card__content > * + * {
-    margin-top: 20px;;
+  &.card--constant-spaced > * + * {
+    margin-top: 20px;
+  }
+
+  & > .card__content {
+    position: relative;
+    flex: 1;
+    overflow-y: hidden;
+
+    &.card__content--free-content {
+      position: unset !important;
+      overflow: visible !important;
+    }
   }
   
   * {
