--- a/src/components/Description/Description.scss
+++ b/src/components/Description/Description.scss
@@ -4,6 +4,7 @@
     padding: 1em 2em;
     border-bottom: 1px solid $description-border-color;
     text-align: start;
+    color: darken($description-border-color, 35%);
 
     &.description--header {
         padding: 30px 0;
